fixed the margin for the navbar on mobile

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -146,7 +146,8 @@ header {
   }
 
   .navbar ul li a {
-     /* margin-bottom: 5px; */
+     margin-top: -5px;
+     margin-bottom: 20px;
      font-size: 20px;
      font-weight: bolder;
   }
